examples/test/testpolicy1253.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1253
  namespace: namespace411
spec:
  podSelector:
    matchLabels:
      key22: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value12
          key44: value16
      podSelector:
        matchLabels:
          key0: value18
          key3: value36
          key13: value27
